# design-accounting-service-server

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  openapi.json  pyproject.toml
app/: main.py
app/configs/database/postgresql/: database.py
app/configs/security/: jwt.py
app/configs/settings/: settings.py
app/entities/: __init__.py  construction.py  task.py  user.py  work_type.py
app/models/: auth.py  user.py
app/repositories/: user_repository.py
app/routers/v1/: auth_router.py  user_router.py
app/routers/v1/dto/request/: signup.py
app/routers/v1/dto/response/: get_all_users.py  signin.py  signup.py
app/services/: auth_service.py  user_service.py
app/services/dto/request/: signup.py
app/services/dto/response/: get_all_users.py  signup.py
migrations/: 20250120_01_ZLA0v.sql
src/: main.py
src/configs/database/: __init__.py  postgres.py
src/configs/logging/: logging.py
src/configs/mail/: __init__.py  config.py
src/configs/security/: security.py
src/configs/settings/: settings.py
src/di/: dependency_injection.py  unit_of_work.py
src/entities/: check_measurement.py  construction.py  defect.py  refresh_token.py  stage_check.py  task.py  user.py  work_type.py
src/errors/: auth.py  token.py  user.py  work_type.py
src/models/: auth.py  refresh_token.py  user.py  work_type.py
src/repositories/: __init__.py
src/repositories/abstraction/: auth.py  check_measurement.py  construction.py  defect.py  refresh_token.py  stage_check.py  task.py  user.py  work_type.py
src/repositories/auth/: repository.py
src/repositories/check_measurement/: repository.py
src/repositories/construction/: repository.py
src/repositories/defect/: repository.py
src/repositories/refresh_token/: repository.py
src/repositories/stage_check/: repository.py
src/repositories/task/: repository.py
src/repositories/user/: repository.py
src/repositories/work_type/: repository.py
src/routers/http/v1/: api.py  error_handler.py
src/routers/http/v1/auth/: mapper.py  router.py  schema.py
src/routers/http/v1/check_measurement/: router.py
src/routers/http/v1/construction/: router.py
src/routers/http/v1/defect/: router.py
src/routers/http/v1/stage_check/: router.py
src/routers/http/v1/task/: router.py
src/routers/http/v1/user/: mapper.py  router.py  schema.py
src/routers/http/v1/work_type/: mapper.py  router.py  schema.py
src/usecases/: auth.py  user.py  work_type.py
src/utils/: authenticate.py  authorization.py
src/utils/verification/: generate_verify_token.py  send_verification_mail.py
