[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Danil Emurashin <emurashin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
sqlmodel = "^0.0.22"
pydantic = "^2.10.4"
ruff = "^0.8.6"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
uvicorn = "^0.34.0"
pydantic-settings = "^2.7.1"
fastapi-async-sqlalchemy = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
